test/expected/explain_hc16.out
explain short char16_t x
        ^
9: error: "short char16_t" is illegal for built-in type
